--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <img src="./img/Lykans_Assoc._balck_logo-removebg-preview.png" alt="">
                 </a>
             </div>
+            <div class="col-lg-3">
                 <nav class="navbar navbar-expand-lg bg-white navbar-light p-0">
                     <a href="index.html" class="navbar-brand d-block d-lg-none">
                         <img width="90px" height="90px" src="./img/Lykans_Assoc._balck_logo-removebg-preview.png"
@@ -49,11 +50,11 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
+                            <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">Who We Are</a>
                             <a href="index.html#why" class="nav-item nav-link">Investment Solutions</a>
                             <a href="index.html#blog" class="nav-item nav-link">Insights</a>
-                            <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                        <a href="#Connect" class="btn btn1 btn-primary mr-3 d-none d-lg-block">Let's Connect</a>
                     </div>
