--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                         <div class="navbar-nav mr-auto py-0">
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link active">Who We Are</a>
-                            <a href="index.html#why" class="nav-item nav-link">Investment Solutions</a>
+                            <a href="company.html" class="nav-item nav-link">Our Companies</a>
                             <a href="index.html#blog" class="nav-item nav-link">Insights</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
