--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="navbar-nav mr-auto py-0">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">Who We Are</a>
-                            <a href="service.html" class="nav-item nav-link">Investment Solutions</a>
+                          <a href="company.html" class="nav-item nav-link">Our Companies</a>
                             <a href="team.html" class="nav-item nav-link">Insights</a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
