--- a/about.html
+++ b/about.html
@@ -249,7 +249,7 @@
                     <i class="fa fa-2x fa-envelope-open text-primary"></i>
                     <div class="ml-3">
                         <h5 class="text-white">Email Us</h5>
-                        <p class="m-0">contact@lykansassociate.com</p>
+                        <p class="m-0">contact@lykansassociates.com</p>
                     </div>
                 </div>
             </div>
@@ -284,12 +284,13 @@
                     <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
                     <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About</a>
                     <a class="text-white mb-2" href="#why"><i class="fa fa-angle-right mr-2"></i>Why Us?</a>
+                                        <a class="text-white mb-2" href="company.html"><i class="fa fa-angle-right mr-2"></i>Our Companies</a>
                     <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-5">
                 <h4 class="font-weight-semi-bold text-primary mb-4">Newsletter</h4>
-                <p>At Lykans Associate, we are committed to shaping financial success stories by delivering innovative,
+                <p>At Lykans Associates, we are committed to shaping financial success stories by delivering innovative,
                     reliable, and tailored investment solutions. </p>
                 <div class="w-100">
                     <div class="input-group">
@@ -305,7 +306,7 @@
         <div class="row p-4  mx-0" style="background: rgba(256, 256, 256, .05);">
             <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
                 <p style="text-align: center;" class="m-0 text-white">&copy; <a class="font-weight-bold"
-                        href="#">lykansassociate.com</a>. All Rights
+                        href="#">lykansassociates.com</a>. All Rights
                     Reserved.</p>
             </div>
         </div>
