--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
         <div class="row">
             <div class="col-lg-5 animated-container">
-                <img class="img-fluid1 rounded animated-left" 
+                <img class="img-fluid rounded animated-left" 
                      src="img/pexels-cottonbro-3205504.jpg" alt="">
             </div>
             <div class="col-lg-7 mt-4 mt-lg-0 animated-container">
