--- a/index.html
+++ b/index.html
@@ -145,17 +145,14 @@
     <!-- About Start -->
 <div class="container-fluid">
     <div class="container">
-        <div class="text-center pb-2">
-            <h6 class="text-uppercase">About Us</h6>
-            <h1 style="margin-bottom:20px" class="mb-4">Learn About Us</h1>
-        </div>
         <div class="row">
-            <div class="col-lg-5 animated-container">
-                <img class="img-fluid rounded animated-left" 
-                     src="img/pexels-cottonbro-3205504.jpg" alt="">
+            <div class="col-lg-5">
+                    <img class="img-fluid rounded" src="img/pexels-cottonbro-3205504.jpg" alt="">
             </div>
-            <div class="col-lg-7 mt-4 mt-lg-0 animated-container">
-                <h6 class="text-uppercase animated-right"></h6>
+            <div class="col-lg-7 mt-4 mt-lg-0">
+                <h2 class="position-relative text-center bg-white text-primary rounded p-3 mt-4 mb-4 d-none d-lg-block"
+                        style="width: 350px; margin-left: -205px;">Learn About Us</h2>
+                    <h6 class="text-uppercase"></h6>
                 <h1 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" 
                     class="mb-4 animated-right">
                     Pave the Path to a Prosperous Future with Lykans Associates
