--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <div class="container-fluid">
     <div class="container">
         <div class="row">
-            <div class="col-lg-5">
+            <div class="col-lg-5 mb-2">
                     <img class="img-fluid rounded" src="img/pexels-cottonbro-3205504.jpg" alt="">
             </div>
             <div class="col-lg-7 mt-4 mt-lg-0">
