--- a/company.html
+++ b/company.html
@@ -105,7 +105,7 @@
             </div>
         </div>
     </div>
-    <div class="content" id="content">
+     <div class="content" id="content">
         <!-- Example of a single company card -->
         <div class="company">
             <div class="profile">
@@ -123,7 +123,7 @@
         <div class="company">
             <div class="profile">
                 <a href="https://lykans.com/" target="_blank">
-                    <img style="height: 300px; width:200px; margin-top:-100px" src="./img/LYKANS-02.png" alt="">
+                    <img style="height: 300px; width:200px; margin-top:-50px" src="./img/Dark Logo.png" alt="">
                 </a>
             </div>
             <div class="description">
@@ -182,7 +182,8 @@
             </div>
             <div class="description">
                 <h3>Play Sport</h3>
-                <p>Company 2 specializes in wealth advisory, helping clients achieve financial freedom.</p>
+                <p>PlaySport is a Jaipur-based company offering sports and extracurricular management programs for
+                    schools, including sports training, championships, expert seminars, and branding support.</p>
             </div>
         </div>
         <div class="company">
@@ -281,7 +282,37 @@
             </div>
             <div class="description">
                 <h3>Trillioner</h3>
-                <p>Company 2 specializes in wealth advisory, helping clients achieve financial freedom.</p>
+                <p>The Trillioner crypto project aims
+                    to bridge the gap between
+                    traditional finance and the crypto
+                    world by offering financial
+                    services for both crypto projects
+                    and private users. This will
+                    include access to our products as
+                    well as traditional fiat banking
+                    and financial services for
+                    blockchain businesses and
+                    individuals.</p>
+            </div>
+        </div>
+        <div class="company">
+            <div class="profile">
+                <a href="" target="_blank">
+                    <img src="./img/MF_Logo (1).png" alt="">
+                </a>
+            </div>
+            <div class="description">
+                <h3>Marker Finance</h3>
+                <p>Provides personalized financial
+                    solutions for both individuals and
+                    businesses. Specializing in
+                    investment financing, wealth
+                    management, and debt
+                    restructuring, Marker Finance is
+                    committed to helping clients
+                    achieve long-term financial
+                    growth and stability through
+                    tailored, strategic plans.</p>
             </div>
         </div>
         <div class="company">
@@ -296,6 +327,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-secondary text-white pt-5 px-sm-3 px-md-5" style="margin-top: 90px;">
