--- a/company.html
+++ b/company.html
@@ -143,7 +143,7 @@
             </div>
             <div class="description">
                 <h3>NuFi</h3>
-                <p>Company 2 specializes in wealth advisory, helping clients achieve financial freedom.</p>
+                <p>NuFi.VC is a venture capital firm that invests in early-stage projects focusing on Web3, blockchain, and emerging technologies. They provide capital, strategic guidance, mentorship, and access to an extensive network to empower innovators shaping the future.</p>
             </div>
         </div>
         <div class="company">
@@ -192,7 +192,7 @@
             </div>
             <div class="description">
                 <h3>TapTapGo</h3>
-                <p>Company 2 specializes in wealth advisory, helping clients achieve financial freedom.</p>
+                <p>Tap Tap Go isn't just a digital business card—it's the all-in-one solution for networking, showcasing achievements, and building your digital identity. This app is a must-have for professionals, entrepreneurs, and anyone seeking to elevate their presence in today's digital landscape.</p>
             </div>
         </div>
         <div class="company">
@@ -207,15 +207,6 @@
                     immersive experience in the world of finance. This year's expo is dedicated to "Be a Part of
                     Changing Future" by unlocking financial opportunities, that empowers you to navigate the uncharted
                     waters of financial evolution.</p>
-            </div>
-        </div>
-        <div class="company">
-            <div class="profile">
-                <img src="./img/Untitled design.png" alt="Company 2 Logo">
-            </div>
-            <div class="description">
-                <h3>Matpatra</h3>
-                <p>Company 2 specializes in wealth advisory, helping clients achieve financial freedom.</p>
             </div>
         </div>
         <div class="company">
