--- a/company.html
+++ b/company.html
@@ -174,6 +174,17 @@
                     go anywhere - we bring the market to you.</p>
             </div>
         </div>
+         <div class="company">
+            <div class="profile">
+                <a href="" target="_blank">
+                    <img src="./img/Oonzoo Logo-13 (7) (2).png" alt="">
+                </a>
+            </div>
+            <div class="description">
+                <h3>yorker fx</h3>
+                <p>YFX is a decentralized perpetual trading platform offering up to 100x leverage. Launched in 2020, it operates on multiple blockchains and features innovative mechanisms like LPB-AMM for efficient trading. YFX ensures low slippage, real-time pricing, and secure trading, backed by audits and investments from major players like OKX.</p>
+            </div>
+        </div>
         <div class="company">
             <div class="profile">
                 <a href="https://playsport.in/" target="_blank">
