--- a/company.html
+++ b/company.html
@@ -120,19 +120,37 @@
                     then offer combined communications expertise to help them achieve recognition and success.</p>
             </div>
         </div>
-        <div class="company">
+         <div class="company">
             <div class="profile">
                 <a href="https://lykans.com/" target="_blank">
                     <img style="height: 300px; width:200px; margin-top:-50px" src="./img/Dark Logo.png" alt="">
                 </a>
             </div>
             <div class="description">
-                <h3>Lykans</h3>
-                <p>Welcome to Lykans, your trusted partner in the real estate world. We have years of experience and a
-                    deep understanding of the property market. Our team is dedicated to help you find your dream home,
-                    commercial space, or investment property. We have a dedicated team of professionals that is
-                    committed to provide personalized, transparent, and result-driven services customized as per your
-                    requirements.</p>
+                <h3>Lykans Realty</h3>
+                <p>
+                    Lykans Realty is a premier real estate company specializing in delivering luxury property solutions.
+                    With a focus on trust, professionalism, and client satisfaction, Lykans excels in building lasting
+                    relationships, maintaining high standards, and offering tailored services through its ventures like
+                    Lykans Finance and Lykans Tax Advisor.</p>
+            </div>
+        </div>
+          <div class="company">
+            <div class="profile">
+                <a href="" target="_blank">
+                    <img src="./img/screenshot-3-1.jpg" alt="">
+                </a>
+            </div>
+            <div class="description">
+                <h3>Ginni Social</h3>
+                <p>Your social media platform where
+                    creativity meets opportunity to
+                    earn you fame and money with
+                    content. Your content, such as
+                    photos, videos and Live streams,
+                    can now help you make money,
+                    and all you have to do is create,
+                    share and engage with others.</p>
             </div>
         </div>
         <div class="company">
@@ -174,15 +192,40 @@
                     go anywhere - we bring the market to you.</p>
             </div>
         </div>
-         <div class="company">
+         
+          <div class="company">
             <div class="profile">
                 <a href="" target="_blank">
-                    <img src="./img/Oonzoo Logo-13 (7) (2).png" alt="">
+                    <img src="./img/logo.ceee825e.svg" alt="">
                 </a>
             </div>
             <div class="description">
                 <h3>yorker fx</h3>
-                <p>YFX is a decentralized perpetual trading platform offering up to 100x leverage. Launched in 2020, it operates on multiple blockchains and features innovative mechanisms like LPB-AMM for efficient trading. YFX ensures low slippage, real-time pricing, and secure trading, backed by audits and investments from major players like OKX.</p>
+                <p>YFX is a decentralized perpetual trading platform offering up to 100x leverage. Launched in 2020, it
+                    operates on multiple blockchains and features innovative mechanisms like LPB-AMM for efficient
+                    trading. YFX ensures low slippage, real-time pricing, and secure trading, backed by audits and
+                    investments from major players like OKX.</p>
+            </div>
+        </div>
+        <div class="company">
+            <div class="profile">
+                <a href="" target="_blank">
+                    <img src="./img/hqdefault.jpg" alt="">
+                </a>
+            </div>
+            <div class="description">
+                <h3>Camp with the Champ</h3>
+                <p>Camp with the Champ is
+                    dedicated to providing a
+                    transformative cricketing
+                    experience, led by Yuvraj Singh
+                    and a team of expert coaches. We
+                    aim to cultivate talent, instill
+                    resilience, and foster a culture of
+                    inclusivity, where every
+                    participant has the opportunity to
+                    thrive and excel in the sport they
+                    love.</p>
             </div>
         </div>
         <div class="company">
