--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="item-height carousel-item position-relative active">
                     <img class="position-absolute w-100 h-100 bg-zoom" src="img/pic1.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
+                        <div class="p-3 animated fadeInDown delay-1s">
                             <h3 class="display-4 text-capitalize text-white mb-4 slide-up">Achieve More with Expert
                                 Private Wealth Management</h3>
                             <a class="btn btn-primary py-3 px-5 mt-2 animated fadeIn delay-2s" href="#Connect">Get An
@@ -98,7 +98,7 @@
                 <div class="item-height carousel-item position-relative">
                     <img class="position-absolute w-100 h-100 bg-zoom" src="img/pic4.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
+                        <div class="p-3 animated fadeInDown delay-1s">
                             <h3 class="display-4 text-capitalize text-white mb-4 slide-up">Secure Your Future with Smart
                                 Investments</h3>
                             <a class="btn btn-primary py-3 px-5 mt-2 animated fadeIn delay-2s" href="#Connect">Call Us
@@ -110,7 +110,7 @@
                 <div class="item-height carousel-item position-relative">
                     <img class="position-absolute w-100 h-100 bg-zoom" src="img/pic3.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3 animated fadeInDown delay-1s" style="max-width: 900px;">
+                        <div class="p-3 animated fadeInDown delay-1s">
                             <h3 class="display-4 text-capitalize text-white mb-4 slide-up">Trusted Leadership in the
                                 Financial Industry</h3>
                             <a class="btn btn-primary py-3 px-5 mt-2 animated fadeIn delay-2s" href="#Connect">Let's
